HEAD
	+ Update release-upgrade script for 6.0
	+ Add support for licenses with unlimited users
5.1.1
	+ Change trial messages to adapt to new 45-day period
	+ Add support for pepertual licenses
5.1
	+ NetWrappers::list_ifaces() now ignores invalid ones like bonding_masters
	+ Reimplement EBox::Validate::isIPInNetwork using NetAddr::IP
	+ Safer management of systemd daemons enabled/disabled status
	+ Add libpam-cap dependency to avoid warnings in auth.log
	+ Avoid uninitialized comparison warnings in zentyal.log regarding
	  EBox::Types::Service and EBox::Types::IPAddr
	+ Use POST method when submitting forms in AJAX requests from dialogs
	+ Pass action to HTMLSetter templates so they can have a different
	  behavior for add and edit
	+ Avoid errors when license file not exist in webadmin restart
	+ Services stop working and activation is required after trial expired
	+ Allow up to 12 dashboard widgets per section instead of 4
	+ Add ftp icon
	+ Rename l2tp package icon to ipsec
	+ Forbid creation of local administrator user if exists in samba
	+ Use EBox::Config::version for commercial repo URL
	+ Simplify _readTheme code and remove unnecessary zentyal.log noise
5.0.10
	+ Fix regression in EBox::Util::Version
5.0.9
	+ Wait for redis-server ready in systemd service
	+ Remove warning in EBox::Util::Version
	+ Add activate-license script to enter license key via CLI
5.0.8
	+ Avoid '/etc/localtime are the same file' errors using symlink
	+ New activation-pending mode prompting for valid trial code before login
5.0.7
	+ Update external links in dashboard
	+ Mask plaintext passwords in bug reports
5.0.6
	+ Show already validated license key in Server Edition model
5.0.5
	+ Handle error parsing license key in Server Edition model
5.0.4
	+ Display commercial edition license info in Server Edition
	+ Proper management of development/commercial repos
	+ Show warning in header when license or trial is expired
	+ Recognise new 5-year commercial license type without support