@@ -165,19 +165,12 @@ sub masonParameters
     }
 
     if (EBox::Global->communityEdition()) {
-        my $state = $sysinfo->get_state();
-        my $lastTime = $state->{lastMessageTime};
-        my $currentTime = time();
-        my $offset = ($currentTime - $lastTime) / 60 / 24;
-        foreach my $msg (@{_periodicMessages()}) {
-            my $name = $msg->{name};
-            next if ($state->{closedMessages}->{$name});
-            my $text = $msg->{text};
-            if ($offset >= $msg->{days}) {
-                push (@params, 'message' => $msg);
-                last;
-            }
-        }
+        my $RELEASE_ANNOUNCEMENT_URL = 'http://wiki.zentyal.org/wiki/Zentyal_6.0_Announcement';
+        my $upgradeAction = "releaseUpgrade('Upgrading to Zentyal 6.0')";
+        my $msg = { name => 'upgrade', text =>__sx('{oh}Zentyal 6.0{ch} is available! {ob}Upgrade now{cb}',
+                    oh => "<a target=\"_blank\" href=\"$RELEASE_ANNOUNCEMENT_URL\">", ch => '</a>',
+                    ob => "<button style=\"margin-left: 20px; margin-top: -6px; margin-bottom: -6px;\" onclick=\"$upgradeAction\">", cb => '</button>') };
+        push (@params, 'message' => $msg);
     }
 
     return \@params;
