@@ -1,4 +1,5 @@
 HEAD
+	+ Show upgrade to 6.0 button in dashboard
 	+ Update release-upgrade script for 6.0
 	+ Add support for licenses with unlimited users
 5.1.1
